# lib/api-spec/openapi.yaml
@@ -600,6 +600,10 @@ components:
           enum: [cash, transfer, card, check]
           nullable: true
           default: cash
+        category:
+          type: string
+          enum: [materials, labor, transport, permits, equipment, others]
+          default: others
         deductionType:
           type: string
           enum: [percentage, amount]
@@ -658,6 +662,10 @@ components:
           enum: [cash, transfer, card, check]
           nullable: true
           default: cash
+        category:
+          type: string
+          enum: [materials, labor, transport, permits, equipment, others]
+          default: others
         deductionType:
           type: string
           enum: [percentage, amount]
